feat(security): Implementar correÃ§Ãµes de seguranÃ§a crÃ­ticas
- Adicionar autenticaÃ§Ã£o baseada em API Key (HTTPBearer)
- Implementar rate limiting em todas as rotas
- Adicionar validaÃ§Ã£o e sanitizaÃ§Ã£o de entrada
- Configurar CORS restritivo
- Mover credenciais para Secrets do Kubernetes
- Adicionar Security Headers HTTP
- Implementar logging de seguranÃ§a
- Validar tamanho de imagens base64 (mÃ¡x 5MB)

Vulnerabilidades corrigidas:
- CORS permissivo (Alta)
- AusÃªncia de autenticaÃ§Ã£o (CrÃ­tica)
- Credenciais em ConfigMap (CrÃ­tica)
- Falta de validaÃ§Ã£o de entrada (MÃ©dia)
- AusÃªncia de rate limiting (MÃ©dia)
- Falta de security headers (MÃ©dia)
- ValidaÃ§Ã£o de tamanho de imagens (MÃ©dia)
- Falta de logging de seguranÃ§a (Baixa)

Arquivos novos:
- k8s/backend-secret.yaml
- SECURITY-AUDIT.md
- SECURITY-SETUP.md
- SECURITY-FIXES-SUMMARY.md

--- a/app.json
+++ b/app.json
@@ -43,7 +43,8 @@
       "eas": {
         "projectId": ""
       },
-      "apiUrl": "http://localhost:8000"
+      "apiUrl": "http://localhost:8000",
+      "apiKey": ""
     }
   }
 }
